website/websites/u64q/code/fib50.1.pyston.log

 Mon, 20 Sep 2021 14:59:44 GMT

COMMAND LINE:
 /usr/bin/pyston fib50.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fib50.pyston", line 12
    print '%.0f' % fib(50)
          ^
SyntaxError: invalid syntax
